[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/Menus/TavernUI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 172.0
offset_bottom = 182.0

[node name="RequirementTitle" type="Label" parent="VBoxContainer"]
offset_right = 172.0
offset_bottom = 14.0
text = "Requirements:"

[node name="Requirements" type="Label" parent="VBoxContainer"]
offset_top = 18.0
offset_right = 172.0
offset_bottom = 32.0
text = "- 20 / 20 wood"

[node name="Button" type="Button" parent="VBoxContainer"]
offset_top = 36.0
offset_right = 172.0
offset_bottom = 56.0
text = "RECRUIT"

[node name="MessageText" type="Label" parent="VBoxContainer"]
offset_top = 60.0
offset_right = 172.0
offset_bottom = 74.0

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_Button_button_down"]
